# level2-3-nlp-finalproject-nlp-04

./: main.py  pyproject.toml
pages/: 2_user.py  3_gene_question.py  4_interview.py  4_show_questions_hint.py
src/: gene_question_2chain_ver.py  generate_question.py  generate_report.py  semantic_search.py  util.py
