[tool.black]
line-length = 120

[tool.poetry]
name = "hello-jobits"
version = "0.5.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.110.1"
uvicorn = "^0.29.0"
pymongo = "^4.6.3"
aiohttp = "^3.9.3"
bson = "^0.5.10"
pydantic = "^2.6.4"
starlette = "^0.37.2"
streamlit = "^1.33.0"
motor = "^3.4.0"
jwt = "^1.3.1"
rsa = "^4.9"
cryptography = "^42.0.5"
loguru = "^0.7.2"
streamlit-extras = "^0.4.2"
langchain = "^0.1.15"
langchain-community = "^0.0.32"
openai = "^1.17.0"
plotly = "^5.20.0"
cohere = "^5.2.5"
pandas = "^2.2.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
